--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,14 @@ mlflow>=2.0.0
 pydantic>=2.0.0
 typer>=0.9.0
 rich>=13.0.0
+
+# Enhanced monitoring dependencies
+matplotlib>=3.5.0
+plotly>=5.0.0
+seaborn>=0.11.0
+scipy>=1.8.0
+psutil>=5.8.0
+
+# Optional dependencies for advanced monitoring (install separately if needed)
+# wandb>=0.13.0  # Weights & Biases for cloud tracking
+# dash>=2.0.0    # For interactive dashboards
